mongodb password changed

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-MONGODB_URL = mongodb+srv://admin:Guru@2006@cluster0.kaeovwe.mongodb.net/Music_Player
+MONGODB_URL = mongodb+srv://admin:Guru2006@cluster0.kaeovwe.mongodb.net/Music_Player
 
 // Imagekit credentials
 
