frontend api updated

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT = 5000
 MONGODB_URL = mongodb+srv://admin:Guru2006@cluster0.kaeovwe.mongodb.net/Music_Player
+FRONTEND_URL = https://music-player-mzveg9tij-gurus-projects-614f14fe.vercel.app
 
 // Imagekit credentials
 
